--- a/11_data_structures.ipynb
+++ b/11_data_structures.ipynb
@@ -34,22 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(\"penguins\", \"cats\", \"sugargliders\")"
+       "Tuple{String, String, String}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myfavoriteanimals = (\"penguins\", \"cats\", \"sugargliders\")"
+    "myfavoriteanimals = (\"penguins\", \"cats\", \"sugargliders\")\n",
+    "typeof(myfavoriteanimals)"
    ]
   },
   {
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
        "\"penguins\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,11 +101,11 @@
       "",
       "Stacktrace:",
       " [1] top-level scope",
-      "   @ In[3]:1",
+      "   @ In[5]:1",
       " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
+      "   @ .\\boot.jl:373 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "   @ Base .\\loading.jl:1196"
      ]
     }
    ],
@@ -127,22 +128,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(bird = \"penguins\", mammal = \"cats\", marsupial = \"sugargliders\")"
+       "NamedTuple{(:bird, :mammal, :marsupial), Tuple{String, String, String}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myfavoriteanimals = (bird = \"penguins\", mammal = \"cats\", marsupial = \"sugargliders\")"
+    "myfavoriteanimals = (bird = \"penguins\", mammal = \"cats\", marsupial = \"sugargliders\")\n",
+    "typeof(myfavoriteanimals)"
    ]
   },
   {
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +165,7 @@
        "\"penguins\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +192,7 @@
        "\"penguins\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +230,7 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +257,7 @@
        "\"867-5309\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +284,7 @@
        "\"555-FILK\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +314,7 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +341,7 @@
        "\"555-FILK\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +363,7 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,13 +393,13 @@
       "",
       "Stacktrace:",
       " [1] getindex(h::Dict{String, String}, key::Int64)",
-      "   @ Base ./dict.jl:482",
+      "   @ Base .\\dict.jl:481",
       " [2] top-level scope",
-      "   @ In[13]:1",
+      "   @ In[8]:1",
       " [3] eval",
-      "   @ ./boot.jl:360 [inlined]",
+      "   @ .\\boot.jl:373 [inlined]",
       " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "   @ Base .\\loading.jl:1196"
      ]
     }
    ],
@@ -432,27 +434,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5-element Vector{String}:\n",
-       " \"Ted\"\n",
-       " \"Robyn\"\n",
-       " \"Barney\"\n",
-       " \"Lily\"\n",
-       " \"Marshall\""
+       "Vector{String} (alias for Array{String, 1})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myfriends = [\"Ted\", \"Robyn\", \"Barney\", \"Lily\", \"Marshall\"]"
+    "myfriends = [\"Ted\", \"Robyn\", \"Barney\", \"Lily\", \"Marshall\"]\n",
+    "typeof(myfriends)"
    ]
   },
   {
@@ -471,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +485,7 @@
        " 13"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +694,7 @@
        " [\"penguins\", \"cats\", \"sugargliders\"]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +717,7 @@
        " [6, 7, 8, 9]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Editing `somenumbers` caused `fibonacci` to get updated as well!\n",
+    "Editing `somenumbers` caused `fibonacci` to get updated as well! **(Reference data type)**\n",
     "\n",
     "In the above example, we didn't actually make a copy of `fibonacci`. We just created a new way to access the entries in the array bound to `fibonacci`.\n",
     "\n",
@@ -1037,14 +1035,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_ray = [1, 2, 3]\n",
+    "push!(a_ray, 4)\n",
+    "pop!(a_ray)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1079,10 +1092,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "MethodError: \u001b[0mCannot `convert` an object of type \u001b[92mInt64\u001b[39m\u001b[0m to an object of type \u001b[91mString\u001b[39m\n\u001b[0mClosest candidates are:\n\u001b[0m  convert(::Type{String}, \u001b[91m::String\u001b[39m) at C:\\Users\\anura\\AppData\\Local\\Programs\\Julia-1.7.2\\share\\julia\\base\\essentials.jl:223\n\u001b[0m  convert(::Type{T}, \u001b[91m::T\u001b[39m) where T<:AbstractString at C:\\Users\\anura\\AppData\\Local\\Programs\\Julia-1.7.2\\share\\julia\\base\\strings\\basic.jl:231\n\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractString\u001b[39m) where T<:AbstractString at C:\\Users\\anura\\AppData\\Local\\Programs\\Julia-1.7.2\\share\\julia\\base\\strings\\basic.jl:232\n\u001b[0m  ...",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: \u001b[0mCannot `convert` an object of type \u001b[92mInt64\u001b[39m\u001b[0m to an object of type \u001b[91mString\u001b[39m\n\u001b[0mClosest candidates are:\n\u001b[0m  convert(::Type{String}, \u001b[91m::String\u001b[39m) at C:\\Users\\anura\\AppData\\Local\\Programs\\Julia-1.7.2\\share\\julia\\base\\essentials.jl:223\n\u001b[0m  convert(::Type{T}, \u001b[91m::T\u001b[39m) where T<:AbstractString at C:\\Users\\anura\\AppData\\Local\\Programs\\Julia-1.7.2\\share\\julia\\base\\strings\\basic.jl:231\n\u001b[0m  convert(::Type{T}, \u001b[91m::AbstractString\u001b[39m) where T<:AbstractString at C:\\Users\\anura\\AppData\\Local\\Programs\\Julia-1.7.2\\share\\julia\\base\\strings\\basic.jl:232\n\u001b[0m  ...",
+      "",
+      "Stacktrace:",
+      " [1] setindex!(h::Dict{String, String}, v0::Int64, key::String)",
+      "   @ Base .\\dict.jl:381",
+      " [2] top-level scope",
+      "   @ In[32]:1",
+      " [3] eval",
+      "   @ .\\boot.jl:373 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1196"
+     ]
+    }
+   ],
+   "source": [
+    "myphonebook[\"Emergency\"] = 911\n",
+    "\n",
+    "# Can't add a value with different data type to a already defined data structure with another data type"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1098,14 +1134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 2 entries:\n",
+       "  \"Jenny\"        => 8675309\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flexible_phonebook = Dict(\"Jenny\" => 8675309, \"Ghostbusters\" => \"555-2368\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1135,10 +1186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "911"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flexible_phonebook[\"Emergency\"] = 911"
+   ]
   },
   {
    "cell_type": "code",
@@ -1202,15 +1266,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.7.2"
   }
  },
  "nbformat": 4,
