--- a/4_loops_2.ipynb
+++ b/4_loops_2.ipynb
@@ -201,47 +201,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5×5 Matrix{Int64}:\n",
-       " 0  0  0  0  0\n",
-       " 0  0  0  0  0\n",
-       " 0  0  0  0  0\n",
-       " 0  0  0  0  0\n",
-       " 0  0  0  0  0"
+       "5×5 Matrix{Float64}:\n",
+       " 0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "m, n = 5, 5\n",
-    "A = fill(0, (m, n))"
+    "A = zeros(m, n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5×5 Matrix{Int64}:\n",
-       " 2  3  4  5   6\n",
-       " 3  4  5  6   7\n",
-       " 4  5  6  7   8\n",
-       " 5  6  7  8   9\n",
-       " 6  7  8  9  10"
+       "5×5 Matrix{Float64}:\n",
+       " 2.0  3.0  4.0  5.0   6.0\n",
+       " 3.0  4.0  5.0  6.0   7.0\n",
+       " 4.0  5.0  6.0  7.0   8.0\n",
+       " 5.0  6.0  7.0  8.0   9.0\n",
+       " 6.0  7.0  8.0  9.0  10.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
