--- a/6_functions_2.ipynb
+++ b/6_functions_2.ipynb
@@ -1022,7 +1022,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A1 = map(add_one, A)\n",
+    "\n",
+    "# A1 = broadcast(add_one, A)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1046,7 +1050,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A2 = add_one.(A1)"
+   ]
   },
   {
    "cell_type": "code",
