--- a/6_functions_2.ipynb
+++ b/6_functions_2.ipynb
@@ -822,7 +822,9 @@
     }
    ],
    "source": [
-    "f(A)"
+    "f(A)\n",
+    "\n",
+    "# Matrix multiplication"
    ]
   },
   {
@@ -857,7 +859,9 @@
     }
    ],
    "source": [
-    "f.(A)"
+    "f.(A)\n",
+    "\n",
+    "# Each element of A is squared"
    ]
   },
   {
