--- a/6_functions_2.ipynb
+++ b/6_functions_2.ipynb
@@ -937,6 +937,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now if we consider a vector 'r',"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = rand(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " `f` will not work on a vector. Unlike `A^2`, which is well-defined, the meaning of `r^2` for a vector, `r`, is not a well-defined algebraic operation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But broadcasting f on a vector will work as it will square every element of `r`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercises\n",
     "\n",
     "#### 6.1 \n",
