--- a/Reading & Writing file/2_read.ipynb
+++ b/Reading & Writing file/2_read.ipynb
@@ -227,6 +227,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filter the empty lines."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
