--- a/6_functions_2.ipynb
+++ b/6_functions_2.ipynb
@@ -985,6 +985,173 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Scope of a variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: i not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: i not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ :0",
+      " [2] eval",
+      "   @ .\\boot.jl:373 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1196"
+     ]
+    }
+   ],
+   "source": [
+    "str = \"abcd\"\n",
+    "[i^4 for i in str]\n",
+    "i "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that ```i``` is local to the function and can't be accessed outside of it. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at another example function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "eg2 (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eg1(x) = x + y\n",
+    "eg2(x,y) = x + y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = 10\n",
+    "eg1(5)\n",
+    "# y used in this function is the global y. i.e. y = 10\n",
+    "\n",
+    "eg2(5,15)\n",
+    "# y used in this function is the local y. i.e. y = 15"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ```global``` keyword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "# Global x\n",
+    "\n",
+    "function scope()\n",
+    "    x = 10\n",
+    "    # local x\n",
+    "end\n",
+    "\n",
+    "scope()\n",
+    "x       # 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "local variable can be made global by using the ```global``` keyword."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "# Global x\n",
+    "\n",
+    "function scope()\n",
+    "    global x = 10\n",
+    "    # local x changed to global\n",
+    "end\n",
+    "\n",
+    "scope() \n",
+    "x       # 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercises\n",
     "\n",
     "#### 6.1 \n",
