--- a/Reading & Writing file/3_manipulate_text.ipynb
+++ b/Reading & Writing file/3_manipulate_text.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        " \"Mr. Bennet was so odd a mixture\" ⋯ 407 bytes ⋯ \" solace was visiting and news.\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        " \"Mr. Bennet was so odd a mixture\" ⋯ 407 bytes ⋯ \" solace was visiting and news.\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "\"It is a truth universally acknowledged, that a single man in possession of a good fortune, must be in want of a wife.\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        " '.': ASCII/Unicode U+002E (category Po: Punctuation, other)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "\"It is a truth universally acknowledged that a single man in possession of a good fortune must be in want of a wife\""
       ]
      },
-     "execution_count": 71,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        " \"Mr Bennet was so odd a mixture \" ⋯ 391 bytes ⋯ \"s solace was visiting and news\""
       ]
      },
-     "execution_count": 61,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        " \"news\""
       ]
      },
-     "execution_count": 63,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,12 +361,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Picking out a particular word"
+    "### Picking out a specific word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        " \"Bingley\""
       ]
      },
-     "execution_count": 73,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "6"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,6 +420,53 @@
     "    end\n",
     "end\n",
     "count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Replacing a specific word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in 1:length(words_pp)\n",
+    "    if words_pp[i] == \"and\"\n",
+    "        words_pp[i] = \"&\"\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"It is a truth universally acknowledged that a single man in possession of a good fortune must be in want of a wife However little known the feelings or views of such a man may be on his first entering a neighbourhood this truth is so well fixed in the minds of the surrou\" ⋯ 439 bytes ⋯ \"no objection to hearing it This was invitation enough Why my dear you must know Mrs Long says that Netherfield is taken by a young man of large fortune from the north of England that he came down on Monday in a chaise & four to see the place & was so much delighted with\""
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "join(words_pp[1:200], \" \")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```and``` is replaced by ```&```"
    ]
   }
  ],
