--- a/3_data_structures.ipynb
+++ b/3_data_structures.ipynb
@@ -1021,7 +1021,257 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercises\n",
+    "### Array Concatenation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's define two arrays, ```a``` and ```b```. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Int64}:\n",
+       " 25\n",
+       " 30\n",
+       " 35\n",
+       " 40"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4]\n",
+    "b = [5, 10, 15, 20]\n",
+    "c = [25, 30, 35, 40]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "concatenating using dimensions(```dims```)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×1×3 Array{Int64, 3}:\n",
+       "[:, :, 1] =\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 4\n",
+       "\n",
+       "[:, :, 2] =\n",
+       "  5\n",
+       " 10\n",
+       " 15\n",
+       " 20\n",
+       "\n",
+       "[:, :, 3] =\n",
+       " 25\n",
+       " 30\n",
+       " 35\n",
+       " 40"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cat(a, b, c, dims=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```hcat()``` allows to concatenate two horizontally."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×3 Matrix{Int64}:\n",
+       " 1   5  25\n",
+       " 2  10  30\n",
+       " 3  15  35\n",
+       " 4  20  40"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hcat(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```vcat()``` allows to concatenate two vertically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12-element Vector{Int64}:\n",
+       "  1\n",
+       "  2\n",
+       "  3\n",
+       "  4\n",
+       "  5\n",
+       " 10\n",
+       " 15\n",
+       " 20\n",
+       " 25\n",
+       " 30\n",
+       " 35\n",
+       " 40"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vcat(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```hvcat()``` allows to concatenate values (or arrays) both horizontally and vertically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×3 Matrix{Int64}:\n",
+       "  5  10  15\n",
+       " 20  25  30"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a, b, c, d, e, f = 5, 10, 15, 20, 25, 30\n",
+    "hvcat((2, 2, 2), a, b, c, d, e, f)\n",
+    "hvcat((3, 3), a, b, c, d, e, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above code, ```(2, 2, 2)``` means row 1 has two elements, row 2 has two and row 3 has two.\n",
+    "\n",
+    "Again, ```(3, 3)``` means row 1 has three elements, row 2 has three."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above code (```hvcat((2, 2, 2), a, b, c, d, e, f)```) can also be written as -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×2 Matrix{Int64}:\n",
+       " 1  3\n",
+       " 2  4\n",
+       " 5  7\n",
+       " 6  8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "[a b ; c d]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's look for concatenating vectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×2 Matrix{Int64}:\n",
+       " 1  3\n",
+       " 2  4\n",
+       " 5  7\n",
+       " 6  8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a, b, c, d, = [1,2], [3,4], [5,6], [7,8]\n",
+    "hvcat((2, 2), a, b, c, d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
     "\n",
     "#### 3.1 \n",
     "Create an array, `a_ray`, with the following code:\n",
