with multiple arguments

--- a/6_functions_2.ipynb
+++ b/6_functions_2.ipynb
@@ -985,6 +985,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Functions with a variable number of arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fun (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function fun(args...)\n",
+    "    print(\"I can tell you how many arguments you passed: $(length(args)).\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I can tell you how many arguments you passed: 1."
+     ]
+    }
+   ],
+   "source": [
+    "fun(\"Julia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I can tell you how many arguments you passed: 1."
+     ]
+    }
+   ],
+   "source": [
+    "fun(1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I can tell you how many arguments you passed: 7."
+     ]
+    }
+   ],
+   "source": [
+    "fun(\"Julia\", \"is\", 1, \"in\", \"a\", 1000000, \"!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Scope of a variable"
    ]
   },
