--- a/3_data_structures.ipynb
+++ b/3_data_structures.ipynb
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now in 1.6: NamedTuples\n",
+    "## Now in Julia 1.6: NamedTuples\n",
     "\n",
     "As you might guess, `NamedTuple`s are just like `Tuple`s except that each element additionally has a name! They have a special syntax using `=` inside a tuple:\n",
     "\n",
@@ -230,9 +230,8 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -302,25 +301,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, String} with 2 entries:\n",
+       "  \"Jenny\"        => \"867-5309\"\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myphonebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Searching for a particular key value pair in a dictionary is done using the ```in()```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "in((\"Jenny\" => \"867-5309\"), myphonebook)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Dict{String, String} with 3 entries:\n",
-       "  \"Jenny\"        => \"867-5309\"\n",
-       "  \"Kramer\"       => \"555-FILK\"\n",
-       "  \"Ghostbusters\" => \"555-2368\""
+       "false"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "myphonebook"
+    "in((\"Lauren\" => \"989-2548\"), myphonebook)"
    ]
   },
   {
