--- a/3_data_structures.ipynb
+++ b/3_data_structures.ipynb
@@ -230,8 +230,9 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +284,7 @@
        "\"555-FILK\""
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,13 +308,15 @@
     {
      "data": {
       "text/plain": [
-       "Dict{String, String} with 2 entries:\n",
+       "Dict{String, String} with 3 entries:\n",
        "  \"Jenny\"        => \"867-5309\"\n",
+       "  \"Kramer\"       => \"555-FILK\"\n",
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -374,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +386,7 @@
        "\"555-FILK\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -405,13 +408,41 @@
        "  \"Ghostbusters\" => \"555-2368\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "myphonebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or we can permanently delete a key value pair from our dictionary using `delete!`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, String} with 1 entry:\n",
+       "  \"Ghostbusters\" => \"555-2368\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delete!(myphonebook, \"Jenny\")"
    ]
   },
   {
